@@ -59,10 +59,12 @@ CREATE TABLE hosts (
        model       TEXT,       /* host model info */
        serial	   TEXT,       /* serial number */
        misc	   TEXT,       /* misc info */
+       asset_id	   TEXT,       /* asset ID */
 			       
        comment	   TEXT,       /* comment */
 
        CONSTRAINT  hostname_key UNIQUE (domain,zone),
-       CONSTRAINT  ether_key UNIQUE(ether,zone)
+       CONSTRAINT  ether_key UNIQUE(ether,zone),
+       CONSTRAINT  asset_key UNIQUE(asset_id,zone)
 ) INHERITS(common_fields);
 
